--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 certifi==2019.9.11
+dj-database-url==0.5.0
 Django==2.2.7
 django-crispy-forms==1.8.0
+django-heroku==0.3.1
 gunicorn==20.0.0
 Markdown==3.1.1
 mistune==0.8.4
+psycopg2==2.8.4
 Pygments==2.4.2
 pytz==2019.3
 sqlparse==0.3.0
