--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,24 @@
+astroid==2.3.3
+autopep8==1.4.4
 certifi==2019.9.11
-dj-database-url==0.5.0
+dj-database-url==0.4.2
 Django==2.2.7
 django-crispy-forms==1.8.0
 django-heroku==0.3.1
 gunicorn==20.0.0
+isort==4.3.21
+lazy-object-proxy==1.4.3
 Markdown==3.1.1
+mccabe==0.6.1
 mistune==0.8.4
+postgres==2.2.1
 psycopg2==2.8.4
+pycodestyle==2.5.0
 Pygments==2.4.2
+pylint==2.4.4
+python-dotenv==0.10.3
 pytz==2019.3
+six==1.13.0
 sqlparse==0.3.0
 whitenoise==4.1.4
+wrapt==1.11.2
