--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
+asgiref==3.2.3
 astroid==2.3.3
 autopep8==1.4.4
 certifi==2019.9.11
 dj-database-url==0.4.2
-Django==2.2.7
+Django==3.0
 django-crispy-forms==1.8.0
 gunicorn==20.0.0
 isort==4.3.21
