slug working fine but still there is an issue with Add Post

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "python.pythonPath": "/home/muhoho/.conda/envs/mysite_blog/bin/python",
+  "python.pythonPath": "/home/muhoho/anaconda3/envs/mysite_blog/bin/python",
 
   "files.associations": {
     "**/templates/*.html": "django-html",
