--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,18 @@ asgiref==3.2.3
 astroid==2.3.3
 autopep8==1.4.4
 certifi==2019.9.11
-dj-database-url==0.4.2
+dj-database-url==0.5.0
 Django==3.0
 django-crispy-forms==1.8.0
+django-heroku==0.3.1
 gunicorn==20.0.0
 isort==4.3.21
 lazy-object-proxy==1.4.3
 Markdown==3.1.1
 mccabe==0.6.1
 mistune==0.8.4
+psycopg2==2.8.5
+psycopg2-binary==2.8.5
 pycodestyle==2.5.0
 Pygments==2.4.2
 pylint==2.4.4
