--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ lazy-object-proxy==1.4.3
 Markdown==3.1.1
 mccabe==0.6.1
 mistune==0.8.4
+pillow==10.3.0
 pycodestyle==2.5.0
 Pygments==2.4.2
 pylint==2.4.4
