Upgrade the application requirments

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,33 @@
-asgiref==3.2.3
-astroid==2.3.3
-autopep8==1.4.4
-certifi==2019.9.11
-dj-database-url==0.4.2
-Django==3.0
-django-crispy-forms==1.8.0
-gunicorn==20.0.0
-isort==4.3.21
-lazy-object-proxy==1.4.3
-Markdown==3.1.1
-mccabe==0.6.1
-mistune==0.8.4
-pillow==10.3.0
-pycodestyle==2.5.0
-Pygments==2.4.2
-pylint==2.4.4
-python-dotenv==0.10.3
-pytz==2019.3
-six==1.13.0
-sqlparse==0.3.0
-whitenoise==4.1.4
-wrapt==1.11.2
+asgiref==3.8.1
+astroid==3.2.4
+autopep8==2.3.1
+backports.zoneinfo==0.2.1
+certifi==2024.8.30
+dill==0.3.9
+dj-database-url==2.3.0
+Django==4.2.16
+django-crispy-forms==2.3
+gunicorn==23.0.0
+importlib_metadata==8.5.0
+isort==5.13.2
+lazy-object-proxy==1.10.0
+Markdown==3.7
+mccabe==0.7.0
+mistune==3.0.2
+packaging==24.2
+pillow==10.4.0
+pkg_resources==0.0.0
+platformdirs==4.3.6
+pycodestyle==2.12.1
+Pygments==2.18.0
+pylint==3.2.7
+python-dotenv==1.0.1
+pytz==2024.2
+six==1.16.0
+sqlparse==0.5.2
+tomli==2.1.0
+tomlkit==0.13.2
+typing_extensions==4.12.2
+whitenoise==6.7.0
+wrapt==1.17.0
+zipp==3.20.2
