updated python version and also packages used in application

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,15 @@
 asgiref==3.8.1
-astroid==3.2.4
-autopep8==2.3.1
-backports.zoneinfo==0.2.1
-certifi==2024.8.30
-dill==0.3.9
-dj-database-url==2.3.0
-Django==4.2.16
+crispy-bootstrap4==2024.10
+Django==5.1.4
 django-crispy-forms==2.3
-gunicorn==23.0.0
-importlib_metadata==8.5.0
-isort==5.13.2
-lazy-object-proxy==1.10.0
-Markdown==3.7
-mccabe==0.7.0
+django-pygments==0.8
 mistune==3.0.2
 packaging==24.2
-pillow==10.4.0
-pkg_resources==0.0.0
-platformdirs==4.3.6
-pycodestyle==2.12.1
+pillow==11.0.0
+pip-autoremove==0.10.0
+pip-chill==1.0.3
+pipdeptree==2.24.0
 Pygments==2.18.0
-pylint==3.2.7
 python-dotenv==1.0.1
-pytz==2024.2
-six==1.16.0
+setuptools==75.6.0
 sqlparse==0.5.2
-tomli==2.1.0
-tomlkit==0.13.2
-typing_extensions==4.12.2
-whitenoise==6.7.0
-wrapt==1.17.0
-zipp==3.20.2
